# MkPFS

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  run-tests.sh
.claude/: MEMORY.md  settings.json
.claude/rules/: html-reporting.md  markdown-style.md  pypi-project-guidelines.md  readme-style.md  tmp-usage.md  venv-activation.md
.claude/skills/fix-tests/: SKILL.md
.claude/skills/html-reporting/: SKILL.md
.claude/skills/related-project-add/: SKILL.md
.claude/skills/related-project-add/references/: memory-entry-template.md  report-template.md  source-manifest-template.md
.github/: FUNDING.yml  dependabot.yml  release-drafter-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-assign.yml  ci.yml  gitleaks.yml  release-drafter.yml  stale.yml
mkpfs/: __init__.py  __main__.py  cli.py  consts.py  logging.py  pbar.py  pfs.py  utils.py
related-projects/: kstuff-lite.md  liborbispkg-wiki.md  liborbispkg.md  other-knowledge-sources.md  pkgtool.md  shadowmountplus.md
related-projects/liborbispkg-wiki/: Home.md  Library.md  PKG-Information.md  PkgEditor.md  PkgTool.md  manifest.md
tests/mkpfs/: test_cli.py  test_consts.py  test_init.py  test_logging.py  test_main.py  test_pbar.py  test_pfs.py  test_utils.py
