[project]
name = "mkpfs"
version = "0.0.3"
description = "Create and Manage Unsigned PFS (Playstation File System) image files with file compression and checksum support."
readme = "README.md"
authors = [{ name = "PSBrew", email = "contact@psbrew.com" }]
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["playstation", "pfs", "filesystem", "image", "pfsc"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cryptography>=47.0.0",
]

[project.scripts]
mkpfs = "mkpfs.cli:main"

[build-system]
requires = ["hatchling<1.30"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/PSBrew/MkPFS"
Issues = "https://github.com/PSBrew/MkPFS/issues"

[tool.hatch.build.targets.wheel]
packages = ["mkpfs"]

[dependency-groups]
dev = [
    "build>=1.2.2",
    "coverage>=7.5.4",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.12",
    "twine>=6.1.0",
]

[tool.pytest.ini_options]
junit_family = "legacy"
addopts = "--cov --cov-report=term-missing --cov-report=xml --junit-xml=unit.xml"

[tool.coverage.run]
source = ["mkpfs"]
relative_files = true
branch = false
disable_warnings = ["include-ignored"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: no cover",
    "def _repr_",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
omit = [
    "_pycache_/*",
    ".git/*",
    "build/*",
    "cache/*",
    "data/*",
    "coverage.xml",
    "dist/*",
    "docs/*",
    "tests/*",
    "train/*",
    "venv/*",
    "related-projects/*",
]

[tool.ruff]
line-length = 119
target-version = "py38"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "legacy",
    "related-projects",
    "tmp",
]

[tool.ruff.lint]
preview = true
select = [
    "ANN", # type annotation
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "PTH", # use `pathlib.Path` instead of `os.path`
    "RUF", # ruff specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "ANN401", # Checks that function arguments are annotated with a more specific type than Any.
    "B007",   # Unused loop variable
    "B008",   # Function call in default argument
    "B905",   # `zip()` without `strict=True`
    "COM812", # Missing trailing comma
    "COM819", # Trailing comma prohibited
    "D1",     # Missing docstring in public module, class, function, or method
    "D203",   # One blank line required before class docstring (ignored because D211 is prioritized in pydocstyle convention 'google')
    "D205",   # 1 blank line required between summary line and description
    "D212",   # Multi-line docstring summary should start at the first line
    "D213",   # Multi-line docstring summary should start at the second line
    "D400",   # First line of docstring should end with a period
    "G004",   # Logging statement uses f-string
    "ISC001", # Implicit string concatenation on a single line
    "ISC002", # Implicit string concatenation on multiple lines
    "PTH123", # `open()` should be replaced by `Path.open()`
    "RUF002", # Checks for ambiguous Unicode characters in docstrings.
    "RUF003", # Checks for ambiguous Unicode characters in comments.
    "SIM108", # Use ternary operator instead of `if`-else`-block
]
unfixable = [ ]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"mkpfs/logging.py" = ["RUF001"]

[tool.ruff.lint.pydocstyle]
convention = "google"
